Fix mobile nav button div spacing

--- a/index.css
+++ b/index.css
@@ -126,6 +126,7 @@ header {
   height: 2px;
   width: 24px;
   transition: 0.3s;
+  margin-bottom: 5px;
 }
 .move .line1 {
   transform: rotate(-45deg) translate(-5px, 5px);
